--- a/ActivityDiagram/ActivityDiagram/View/MainWindow.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
-        Height="300"
-        Width="300"
+        Height="400"
+        Width="400"
         Title="MVVM Light Application"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -19,14 +19,18 @@
     </Window.Resources>
 
     <Grid x:Name="LayoutRoot">
-
-        <TextBlock FontSize="36"
-                   FontWeight="Bold"
-                   Foreground="Purple"
-                   Text="{Binding WelcomeTitle}"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap" />
+        <Grid Margin="0,0,0,249" Grid.ColumnSpan="2"/>
+        <Menu x:Name="menu" Height="20" VerticalAlignment="Top" Background="#FFF18D8D">
+            <MenuItem Header="File" Click="MenuItem_Click_1">
+                <MenuItem Header="New" Height="19">
+                    <MenuItem Header="New Project" Height="19" Margin="0,0,-41,0" />
+                </MenuItem>
+                <MenuItem Header="Save" Height="20">
+                    <MenuItem x:Name="SaveAs" Header="Save As..."  Height="20" Margin="0,0,-41,0"/>
+                </MenuItem>
+            </MenuItem>
+            <MenuItem Header="Edit"/>
+        </Menu>
 
     </Grid>
 </Window>
