--- a/ActivityDiagram/ActivityDiagram/View/Shapes/PentagonUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/PentagonUserControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="100">
     <Grid>
-        <Polygon Points="80,100 20,100 0,40 50,0 100,40 " Stroke="White" StrokeThickness="4">
+        <Polygon Points="80,100 20,100 0,40 50,0 100,40 " Stroke="Black" StrokeThickness="4">
             
         </Polygon>
     </Grid>
