--- a/ActivityDiagram/ActivityDiagram/View/Shapes/CircleUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/CircleUserControl.xaml
@@ -2,24 +2,29 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
              mc:Ignorable="d" 
+             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}" 
              d:DesignHeight="100" d:DesignWidth="100">
     <Grid>
-        <Ellipse Stroke="Black" StrokeThickness="4" Width="100" Height="100">
+        
+        <Ellipse Stroke="Black" StrokeThickness="4" Fill="White">
+            
             <!-- From the Demos for mouse interaction, needs additional code to be relevant -->
-            <!-- <i:interaction.triggers>
-                <i:eventtrigger eventname="mousedown">
-                    <cmd:eventtocommand command="{binding datacontext.mousedownshapecommand, relativesource={relativesource findancestor, ancestortype={x:type window}}}" passeventargstocommand="true"/>
-                </i:eventtrigger>
-                <i:eventtrigger eventname="mousemove">
-                    <cmd:eventtocommand command="{binding datacontext.mousemoveshapecommand, relativesource={relativesource findancestor, ancestortype={x:type window}}}" passeventargstocommand="true"/>
-                </i:eventtrigger>
-                <i:eventtrigger eventname="mouseup">
-                    <cmd:eventtocommand command="{binding datacontext.mouseupshapecommand, relativesource={relativesource findancestor, ancestortype={x:type window}}}" passeventargstocommand="true"/>
-                </i:eventtrigger>
-            </i:interaction.triggers> -->
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseDownCircleCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseMove">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseMoveCircleCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseUp">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseUpCircleCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </Ellipse>
     </Grid>
 </UserControl>
