--- a/ActivityDiagram/ActivityDiagram/View/Shapes/TriangleUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/TriangleUserControl.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="100">
+             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" 
+             d:DesignHeight="{Binding Height}" d:DesignWidth="{Binding Width}">
     <Grid>
-        <Polygon Points="100,100 0,100 50,0" Stroke="Black" StrokeThickness="4">
+            <Polygon Points="100,100 0,100 50,0" Stroke="Black" StrokeThickness="4">
             <!-- Code needed for mouse interaction -->
         </Polygon>
     </Grid>
