--- a/ActivityDiagram/ActivityDiagram/View/Shapes/RectangleUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/RectangleUserControl.xaml
@@ -1,16 +1,17 @@
 ﻿<UserControl x:Class="ActivityDiagram.View.Shapes.RectangleUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
-             mc:Ignorable="d" 
-             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}" 
+             mc:Ignorable="d"
+             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
              d:DesignHeight="100" d:DesignWidth="100">
-    <Grid>
-        <Line Stroke="Red" StrokeThickness="5" X1="0" Y1="{Binding Height}" X2="{Binding Width}" Y2="{Binding Height}" />
-        <Rectangle Stroke="Black" StrokeThickness="4">
-            <!-- Needs mouse interaction code -->
-        </Rectangle>
-    </Grid>
+  <Grid>
+    <Rectangle Stroke="Black" StrokeThickness="4" Fill="White">
+      <!-- Needs mouse interaction code -->
+    </Rectangle>
+  </Grid>
 </UserControl>
