--- a/ActivityDiagram/ActivityDiagram/View/Shapes/RectangleUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/RectangleUserControl.xaml
@@ -9,9 +9,19 @@
              mc:Ignorable="d"
              Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
              d:DesignHeight="100" d:DesignWidth="100">
-  <Grid>
-    <Rectangle Stroke="Black" StrokeThickness="4" Fill="White">
-      <!-- Needs mouse interaction code -->
-    </Rectangle>
-  </Grid>
+    <Grid>
+        <Rectangle Stroke="Black" StrokeThickness="4" Fill="White">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseDownShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseMove">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseMoveShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseUp">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseUpShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </Rectangle>
+    </Grid>
 </UserControl>
