--- a/ActivityDiagram/ActivityDiagram/View/Shapes/TriangleUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/TriangleUserControl.xaml
@@ -10,8 +10,18 @@
              Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" 
              d:DesignHeight="{Binding Height}" d:DesignWidth="{Binding Width}">
     <Grid>
+        <Ellipse Name="northPoint" HorizontalAlignment="Center" VerticalAlignment="Top" Width="10" Height="10" Margin="-4" Fill="Gray"  Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
+        <Ellipse Name="southPoint" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="10" Height="10" Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
+        <Ellipse Name="eastPoint" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="10" Height="10"  Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
+        <Ellipse Name="westPoint" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="10" Height="10"  Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
             <Polygon Points="100,100 0,100 50,0" Stroke="Black" StrokeThickness="4" Fill="White">
             <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseEnter">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseHoverShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseLeave">
+                    <cmd:EventToCommand Command="{Binding DataContext.MouseExitShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
                 <i:EventTrigger EventName="MouseDown">
                     <cmd:EventToCommand Command="{Binding DataContext.MouseDownShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
                 </i:EventTrigger>
