--- a/ActivityDiagram/ActivityDiagram/View/Menu.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Menu.xaml
@@ -14,6 +14,8 @@
                 </MenuItem>
                 <MenuItem x:Name="mnuSave"  Header="Save" Command="{Binding SaveDiagramCommand}"/>
                 <MenuItem Command="ApplicationCommands.SaveAs"/>
+                <MenuItem Command="ApplicationCommands.Copy"/>
+                <MenuItem Command="ApplicationCommands.Paste"/>
                 <MenuItem x:Name="mnuOpen" Header="Open" Click="mnuOpen_Click"  Command="{Binding OpenDiagramCommand}"/>
 
 
